Add search boxes

--- a/site/style.css
+++ b/site/style.css
@@ -1,15 +1,3 @@
-/* Always set the map height explicitly to define the size of the div
- * element that contains the map. */
-#map {
-    height: 90vh;
-    width: 100vw;
-}
-
-#search-button {
-    width: 100px;
-    height: 5vh;
-}
-/* Optional: Makes the sample page fill the window. */
 html, body {
     height: 100%;
     width: 100%;
@@ -19,4 +7,32 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#map {
+    height: 90vh;
+    width: 100vw;
+}
+
+#controls {
+	display: flex;
+	height: 10vh;
+	width: 100vw;
+	flex-direction: row;
+	align-items: center;
+}
+
+#search-boxes {
+	display: flex;
+	flex-direction: column;
+}
+
+.places-search {
+	width: 300px;
+	height: 30px;
+}
+
+#search-button {
+	width: 50px;
+	height: 30px;
 }
